# loki-interceptor

./: .bandit  .env.example  .env.test.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT19_DESIGN_SYSTEM_DELIVERY.md  AGENT1_COMPLETION_REPORT.md  AGENT21_BACKEND_TESTING_DELIVERY.md  AGENT22_AI_QUALITY_REPORT.md  AGENT22_EXECUTIVE_SUMMARY.md  AGENT22_FILES_CREATED.txt  AGENT25_E2E_TESTING_DELIVERY.txt  AGENT8_COMPLETION_REPORT.md  AGENT_10_SUMMARY.md  AGENT_15_DELIVERY_REPORT.md  AGENT_16_DELIVERY_REPORT.md  AGENT_17_DELIVERY_REPORT.md  AGENT_17_FILES_CREATED.txt  AGENT_18_DELIVERY_REPORT.md  AGENT_24_CODE_QUALITY_DELIVERY.md  AGENT_26_DELIVERY_SUMMARY.md  AGENT_28_FILES_CREATED.txt  AGENT_28_INTEGRATION_REPORT.md  AGENT_28_SUMMARY.txt  AGENT_9_DELIVERY_SUMMARY.md  AI_COLLABORATION_WORKFLOW.md  AI_INTEGRATION_GUIDE.md  ANALYTICS_CAPABILITIES_OVERVIEW.md  ANALYTICS_GUIDE.md  API_DOCUMENTATION.md  API_GATEWAY_DELIVERABLES.md  API_KEY_SETUP.md  ARCHITECTURE_PERFORMANCE_DIAGRAM.md  AUDIT_EXECUTIVE_SUMMARY.md  BACKEND_TESTING_GUIDE.md  BRAND_GUIDELINES.md  CHANGELOG.md  CLAUDE_INTEGRATION_EXPLAINED.md  CODE_QUALITY_INDEX.md  (+88 more)
.claude/: mcp_config.json  settings.local.json
.claude/agents/: README.md  compliance-engineer.md  customer-success.md  document-auditor.md  integration-specialist.md  legal-researcher.md  performance-optimizer.md  sales-engineer.md  vercel-deployment-specialist.md  vercel-devops-engineer.md
.claude/skills/: README.md  SKILLS_SUMMARY.md
.github/workflows/: ci.yml  code-quality.yml  deploy.yml  frontend-tests.yml  security-scan.yml  tests.yml
api/: index.py
backend/: .dockerignore  Dockerfile  build_backend.py  bulk_enhance_all_modules.py  bulk_enhance_tax_na.py  enhance_na_messages.py  enhance_tax_na_messages.py  server.py  test_industry_gates.py  test_minimal.py
backend/ai/: __init__.py  ab_testing.py  context_manager.py  cost_tracker.py  explainability.py  fallback_handler.py  prompt_optimizer.py  prompt_templates.py  quality_metrics.py  response_validator.py  semantic_cache.py
backend/analytics/: __init__.py  anomaly_detector.py  benchmarking_engine.py  dashboard.py  forecasting_engine.py  predictive_scoring.py  trend_analyzer.py
backend/analyzers/: bias_detector.py  hallucination_heuristic.py  pii_scanner.py
backend/api/: README.md  dependencies.py  main.py
backend/compliance/: ORCHESTRATOR_SUMMARY.md  __init__.py  benchmarking.py  calendar.py  certification.py  change_monitor.py  conflict_detector.py  cost_estimator.py  example_integration.py  module_recommender.py  orchestrator.py  risk_heatmap.py  roadmap_generator.py  scoring_engine.py
backend/core/: CORRECTION_ENHANCEMENTS.md  CORRECTOR_README.md  NLP_ENHANCEMENTS.md  aggregator.py  async_engine.py  audit.py  audit_log.py  batch_corrector.py  cache.py  comprehensive_test_runner.py  config_manager.py  correction_exporter.py  correction_patterns.py  correction_pipeline.py  correction_scheduler.py  correction_strategies.py  correction_synthesizer.py  corrector.py  cross_validation.py  engine.py  engine_optimized.py  gate_module.py  gate_registry.py  health.py  interceptor.py  logging_config.py  metrics.py  providers.py  providers_optimized.py  security.py  semantic_layer.py  semantic_rules.json  shutdown.py  streaming_corrector.py  test_advanced_corrector.py  test_enhanced_corrections.py  test_results.json  universal_detectors.py
backend/db/: __init__.py  backup_manager.py  export_manager.py  models.py  query_builder.py  session.py
backend/enterprise/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py  audit_trail.py  auth.py  config.py  example_integration.py  migrate.py  multi_tenant.py  rbac.py  requirements.txt  security.py
backend/gates/: gdpr_uk_gates.py
backend/granite/: README.md  __init__.py  document_converter.py  granite_interceptor.py  guardian_validator.py
backend/integrations/: __init__.py  base.py  email.py  manager.py  slack.py  teams.py  zapier.py
backend/middleware/: __init__.py  security_headers.py
backend/monitoring/: __init__.py  correction_dashboard.py
backend/platform/: __init__.py  config.py  error_handler.py  feature_flags.py  health_monitor.py  orchestrator.py  telemetry.py
backend/reporting/: __init__.py  executive_summary.py  export_engine.py  report_builder.py  scheduler.py
backend/routes/: analytics.py
backend/security/: __init__.py  auth_manager.py  rate_limiter.py  sanitizer.py
cli/: loki_admin.py  loki_correct.py
configs/: dev_api_keys.example  fluentd.conf  prometheus.yml
data/: audit.db  qa_bug_report_20251017T095609Z.md  qa_test_log_20251017T095609Z.json
docs/: ADDING_NEW_MODULES.md  INDEX.md  RELEASE_NOTES_DRAFT.md  WEBSITE_STRUCTURE.md  multi_model_aggregation.md
electron/: electron-builder.yml  main.js  package.json  preload.js
examples/: granite_integration_example.py
frontend/: .env.example  .gitignore  .lighthouserc.json  DESIGN_SYSTEM_INTEGRATION.md  Dockerfile  EDITOR_QUICKSTART.md  README.md  TESTING_QUICK_START.md  api.txt  app-web.js  app.html  app.js  correction_visualizer.html  default.conf  index-react.html  index-web.html  index.html  jest.config.js  nginx.conf  package-react.json  package.json  playwright.config.ts  style.css  tailwind.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts  webpack.config.js
scripts/: collect_telemetry.py  generate_gold_fixtures.py  generate_test_dashboard.py  qa_deep_pass.py  run_correction_tests.sh  run_tests.py  system_check.sh
sdk/: loki_client.py
terraform/: README.md  eks.tf  main.tf  outputs.tf  rds.tf  variables.tf  vpc.tf
tests/: QUICK_REFERENCE.md  README.md  conftest.py  factories.py  helpers.py  test_synthesis.py  test_universal_synthesis.py
(+799 files in other folders)
