[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loki-interceptor"
version = "1.0.0"
description = "Enterprise compliance intelligence platform with multi-agent system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "LOKI Development Team", email = "dev@loki.ai"}
]
keywords = [
    "compliance",
    "ai",
    "intelligence",
    "document-analysis",
    "multi-agent"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "Flask>=3.0.0",
    "Flask-Cors>=4.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "anthropic>=0.28.0",
    "openai>=1.6.0",
    "google-generativeai>=0.5.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "fakeredis>=2.19.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "celery>=5.3.0",
    "psutil>=5.9.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.12.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-annotations>=2.9.1",
    "flake8-bandit>=4.1.1",
    "flake8-simplify>=0.20.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.10",
    "types-redis>=4.6.0.10",
    "types-PyYAML>=6.0.12",
    "types-click>=8.1.13",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "interrogate>=1.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    "migrations",
    "node_modules",
    ".venv",
]
known_first_party = [
    "backend",
    "tests",
]
known_third_party = [
    "anthropic",
    "openai",
    "google",
    "fastapi",
    "sqlalchemy",
]

[tool.pytest.ini_options]
# PyTest configuration
testpaths = [
    "tests",
    "backend/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Asyncio
asyncio_mode = "auto"

# Coverage options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-ra",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-branch",
]

# Markers for organizing tests
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "compliance: compliance-related tests",
    "security: security-related tests",
    "gates: gate-related tests",
    "correction: correction engine tests",
    "synthesis: synthesis engine tests",
]

# Timeout for tests (in seconds)
timeout = 300

# Minimum Python version
minversion = "7.0"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/venv/*",
]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pylint]
max-line-length = 100
disable = [
    "missing-docstring",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "fixme",
]

[tool.bandit]
exclude_dirs = ["tests", "test"]
tests = ["B101", "B601"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
fail-under = 50
exclude = ["tests", "test"]
verbose = 2
quiet = false
whitelist-regex = "^test_.*|^.*_test$|^Test.*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
